# urbasys

./: .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  flake.nix  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  treefmt.toml
.github/workflows/: build.yml
tests/: fs_utils.py  test_log_utils.py  test_urbackup.py
tests/urbackup/: test_app.py  test_retention.py
urbasys/: log_utils.py
urbasys/urbackup/: app.py  retention.py
